// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`StepForm rendering tests type PROMPT_REF - test 1`] = `
<div>
  <div
    class="flex h-full flex-1 flex-col gap-5 overflow-y-auto p-5"
    data-testid="step-form"
  >
    <div
      class="grid gap-2"
      data-slot="form-item"
      data-testid="steps.1.title"
    >
      <label
        class="flex items-center text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive gap-1"
        data-error="false"
        data-slot="form-label"
        for="_r_0_-form-item"
      >
        Titel
        <span
          class="text-destructive"
        >
          *
        </span>
      </label>
      <input
        aria-describedby="_r_0_-form-item-description"
        aria-invalid="false"
        class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive"
        data-slot="form-control"
        data-testid="input"
        id="_r_0_-form-item"
        name="steps.1.title"
        placeholder="Schritt Titel"
        value="step-title-2"
      />
    </div>
    <div
      class="grid gap-2"
      data-slot="form-item"
      data-testid="steps.1.type"
    >
      <label
        class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
        data-error="false"
        data-slot="form-label"
        for="_r_1_-form-item"
      >
        Typ des Schritts
      </label>
      <div
        class="relative"
      >
        <button
          aria-autocomplete="none"
          aria-controls="radix-_r_2_"
          aria-expanded="false"
          class="border-input data-[placeholder]:text-muted-foreground [&_svg:not([class*='text-'])]:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 dark:hover:bg-input/50 flex items-center justify-between gap-2 rounded-md border bg-transparent px-3 py-2 text-sm whitespace-nowrap shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 data-[size=default]:h-9 data-[size=sm]:h-8 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:flex *:data-[slot=select-value]:items-center *:data-[slot=select-value]:gap-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 w-full"
          data-size="default"
          data-slot="select-trigger"
          data-state="closed"
          data-testid="steps.1.type-trigger"
          dir="ltr"
          role="combobox"
          type="button"
        >
          <span
            data-slot="select-value"
            style="pointer-events: none;"
          >
            Prompt
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down size-4 opacity-50"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
        <div
          data-testid="mock-react-portal"
        />
      </div>
    </div>
    <div
      class="grid gap-2"
      data-slot="form-item"
      data-testid="steps.1.promptId"
    >
      <label
        class="flex items-center text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive gap-1"
        data-error="false"
        data-slot="form-label"
        for="_r_3_-form-item"
      >
        Prompt
        <span
          class="text-destructive"
        >
          *
        </span>
      </label>
      <div
        data-slot="popover"
        data-testid="mock-react-popover-root"
      >
        <button
          aria-describedby="_r_3_-form-item-description"
          aria-expanded="false"
          aria-invalid="false"
          class="inline-flex items-center gap-2 whitespace-nowrap rounded-md text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full justify-between font-normal"
          data-slot="popover-trigger"
          data-testid="item-select"
          id="_r_3_-form-item"
          role="combobox"
        >
          <span
            class="truncate"
          >
            Prompt auswählen…
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-chevrons-up-down ml-2 h-4 w-4 shrink-0 opacity-50"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m7 15 5 5 5-5"
            />
            <path
              d="m7 9 5-5 5 5"
            />
          </svg>
        </button>
        <div
          data-testid="mock-react-popover-portal"
        />
      </div>
    </div>
    <div
      class="grid gap-2"
      data-slot="form-item"
      data-testid="steps.1.isStart"
    >
      <div
        class="relative flex items-center space-x-2"
      >
        <button
          aria-checked="false"
          aria-describedby="_r_4_-form-item-description"
          aria-invalid="false"
          class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive size-4 shrink-0 rounded-[4px] border shadow-xs transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
          data-slot="form-control"
          data-state="unchecked"
          id="_r_4_-form-item"
          role="checkbox"
          type="button"
          value="on"
        >
          <div
            data-testid="mock-react-presence"
          >
            <span
              class="grid place-content-center text-current transition-none"
              data-slot="checkbox-indicator"
              data-state="unchecked"
              style="pointer-events: none;"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-check size-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
            </span>
          </div>
        </button>
        <label
          class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive cursor-pointer"
          data-error="false"
          data-slot="form-label"
          for="_r_4_-form-item"
        >
          Ist Startschritt
        </label>
      </div>
    </div>
    <div
      class="grid gap-2"
      data-slot="form-item"
      data-testid="steps.1.hint"
    >
      <label
        class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
        data-error="false"
        data-slot="form-label"
        for="_r_5_-form-item"
      >
        Hinwweis
      </label>
      <textarea
        aria-describedby="_r_5_-form-item-description"
        aria-invalid="false"
        class="border-input placeholder:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 flex field-sizing-content min-h-16 w-full rounded-md border bg-transparent px-3 py-2 text-base shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
        data-slot="form-control"
        data-testid="textarea"
        id="_r_5_-form-item"
        maxlength="750"
        name="steps.1.hint"
        placeholder="Kontext oder Anweisungen für den Nutzer im Runner"
        rows="3"
      >
        step-hint-2
      </textarea>
    </div>
    <div
      class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
      data-orientation="horizontal"
      data-slot="separator"
      role="none"
    />
    <div
      class="space-y-3"
    >
      <h3
        class="text-sm font-semibold"
      >
        Nächste Schritte
      </h3>
      <p
        class="text-sm text-muted-foreground"
      >
        Keine Verbindungen — dieser Schritt beendet den Workflow.
      </p>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 w-full"
        data-slot="button"
        data-testid="add-edge-btn"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus mr-2 h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Verbindung hinzufügen
      </button>
    </div>
  </div>
</div>
`;

exports[`StepForm rendering tests type STANDALONE - test 1`] = `
<div>
  <div
    class="flex h-full flex-1 flex-col gap-5 overflow-y-auto p-5"
    data-testid="step-form"
  >
    <div
      class="grid gap-2"
      data-slot="form-item"
      data-testid="steps.1.title"
    >
      <label
        class="flex items-center text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive gap-1"
        data-error="false"
        data-slot="form-label"
        for="_r_9_-form-item"
      >
        Titel
        <span
          class="text-destructive"
        >
          *
        </span>
      </label>
      <input
        aria-describedby="_r_9_-form-item-description"
        aria-invalid="false"
        class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive"
        data-slot="form-control"
        data-testid="input"
        id="_r_9_-form-item"
        name="steps.1.title"
        placeholder="Schritt Titel"
        value="step-title-2"
      />
    </div>
    <div
      class="grid gap-2"
      data-slot="form-item"
      data-testid="steps.1.type"
    >
      <label
        class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
        data-error="false"
        data-slot="form-label"
        for="_r_a_-form-item"
      >
        Typ des Schritts
      </label>
      <div
        class="relative"
      >
        <button
          aria-autocomplete="none"
          aria-controls="radix-_r_b_"
          aria-expanded="false"
          class="border-input data-[placeholder]:text-muted-foreground [&_svg:not([class*='text-'])]:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 dark:hover:bg-input/50 flex items-center justify-between gap-2 rounded-md border bg-transparent px-3 py-2 text-sm whitespace-nowrap shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 data-[size=default]:h-9 data-[size=sm]:h-8 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:flex *:data-[slot=select-value]:items-center *:data-[slot=select-value]:gap-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 w-full"
          data-size="default"
          data-slot="select-trigger"
          data-state="closed"
          data-testid="steps.1.type-trigger"
          dir="ltr"
          role="combobox"
          type="button"
        >
          <span
            data-slot="select-value"
            style="pointer-events: none;"
          >
            Eigenständig
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down size-4 opacity-50"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
        <div
          data-testid="mock-react-portal"
        />
      </div>
    </div>
    <div
      class="grid gap-2"
      data-slot="form-item"
      data-testid="steps.1.content"
    >
      <div
        class="border border-slate-200 rounded-lg overflow-hidden bg-white"
        data-testid="tiptap-editor"
      >
        <div
          class="flex flex-wrap gap-1 p-2 border-b border-slate-200 bg-slate-50"
          data-testid="toolbar"
        >
          <button
            class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
            title="Bold"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-bold w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 12h9a4 4 0 0 1 0 8H7a1 1 0 0 1-1-1V5a1 1 0 0 1 1-1h7a4 4 0 0 1 0 8"
              />
            </svg>
          </button>
          <button
            class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
            title="Italic"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-italic w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="19"
                x2="10"
                y1="4"
                y2="4"
              />
              <line
                x1="14"
                x2="5"
                y1="20"
                y2="20"
              />
              <line
                x1="15"
                x2="9"
                y1="4"
                y2="20"
              />
            </svg>
          </button>
          <button
            class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
            title="Underline"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-underline w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 4v6a6 6 0 0 0 12 0V4"
              />
              <line
                x1="4"
                x2="20"
                y1="20"
                y2="20"
              />
            </svg>
          </button>
          <button
            class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
            title="Strikethrough"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-strikethrough w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 4H9a3 3 0 0 0-2.83 4"
              />
              <path
                d="M14 12a4 4 0 0 1 0 8H6"
              />
              <line
                x1="4"
                x2="20"
                y1="12"
                y2="12"
              />
            </svg>
          </button>
          <div
            class="w-px h-6 bg-slate-300 mx-1"
          />
          <button
            class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
            title="Heading 1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-heading1 lucide-heading-1 w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 12h8"
              />
              <path
                d="M4 18V6"
              />
              <path
                d="M12 18V6"
              />
              <path
                d="m17 12 3-2v8"
              />
            </svg>
          </button>
          <button
            class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
            title="Heading 2"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-heading2 lucide-heading-2 w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 12h8"
              />
              <path
                d="M4 18V6"
              />
              <path
                d="M12 18V6"
              />
              <path
                d="M21 18h-4c0-4 4-3 4-6 0-1.5-2-2.5-4-1"
              />
            </svg>
          </button>
          <button
            class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
            title="Heading 3"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-heading3 lucide-heading-3 w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 12h8"
              />
              <path
                d="M4 18V6"
              />
              <path
                d="M12 18V6"
              />
              <path
                d="M17.5 10.5c1.7-1 3.5 0 3.5 1.5a2 2 0 0 1-2 2"
              />
              <path
                d="M17 17.5c2 1.5 4 .3 4-1.5a2 2 0 0 0-2-2"
              />
            </svg>
          </button>
          <div
            class="w-px h-6 bg-slate-300 mx-1"
          />
          <button
            class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
            title="Bullet List"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-list w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 5h.01"
              />
              <path
                d="M3 12h.01"
              />
              <path
                d="M3 19h.01"
              />
              <path
                d="M8 5h13"
              />
              <path
                d="M8 12h13"
              />
              <path
                d="M8 19h13"
              />
            </svg>
          </button>
          <button
            class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
            title="Numbered List"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-list-ordered w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 5h10"
              />
              <path
                d="M11 12h10"
              />
              <path
                d="M11 19h10"
              />
              <path
                d="M4 4h1v5"
              />
              <path
                d="M4 9h2"
              />
              <path
                d="M6.5 20H3.4c0-1 2.6-1.925 2.6-3.5a1.5 1.5 0 0 0-2.6-1.02"
              />
            </svg>
          </button>
          <div
            class="w-px h-6 bg-slate-300 mx-1"
          />
          <button
            class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
            title="Align Left"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-text-align-start w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 5H3"
              />
              <path
                d="M15 12H3"
              />
              <path
                d="M17 19H3"
              />
            </svg>
          </button>
          <button
            class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
            title="Align Center"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-text-align-center w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 5H3"
              />
              <path
                d="M17 12H7"
              />
              <path
                d="M19 19H5"
              />
            </svg>
          </button>
          <button
            class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
            title="Align Right"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-text-align-end w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 5H3"
              />
              <path
                d="M21 12H9"
              />
              <path
                d="M21 19H7"
              />
            </svg>
          </button>
          <div
            class="w-px h-6 bg-slate-300 mx-1"
          />
          <button
            class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
            title="Code Block"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-code w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m16 18 6-6-6-6"
              />
              <path
                d="m8 6-6 6 6 6"
              />
            </svg>
          </button>
          <button
            class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
            title="Quote"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-quote w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
              />
              <path
                d="M5 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
              />
            </svg>
          </button>
          <div
            class="w-px h-6 bg-slate-300 mx-1"
          />
          <button
            class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
            title="Undo"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-undo w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 7v6h6"
              />
              <path
                d="M21 17a9 9 0 0 0-9-9 9 9 0 0 0-6 2.3L3 13"
              />
            </svg>
          </button>
          <button
            class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
            title="Redo"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-redo w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 7v6h-6"
              />
              <path
                d="M3 17a9 9 0 0 1 9-9 9 9 0 0 1 6 2.3l3 2.7"
              />
            </svg>
          </button>
        </div>
        <div
          data-testid="editor-content"
        >
          Editor Content
        </div>
      </div>
    </div>
    <div
      class="grid gap-2"
      data-slot="form-item"
      data-testid="steps.1.isStart"
    >
      <div
        class="relative flex items-center space-x-2"
      >
        <button
          aria-checked="false"
          aria-describedby="_r_d_-form-item-description"
          aria-invalid="false"
          class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive size-4 shrink-0 rounded-[4px] border shadow-xs transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
          data-slot="form-control"
          data-state="unchecked"
          id="_r_d_-form-item"
          role="checkbox"
          type="button"
          value="on"
        >
          <div
            data-testid="mock-react-presence"
          >
            <span
              class="grid place-content-center text-current transition-none"
              data-slot="checkbox-indicator"
              data-state="unchecked"
              style="pointer-events: none;"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-check size-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
            </span>
          </div>
        </button>
        <label
          class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive cursor-pointer"
          data-error="false"
          data-slot="form-label"
          for="_r_d_-form-item"
        >
          Ist Startschritt
        </label>
      </div>
    </div>
    <div
      class="grid gap-2"
      data-slot="form-item"
      data-testid="steps.1.hint"
    >
      <label
        class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
        data-error="false"
        data-slot="form-label"
        for="_r_e_-form-item"
      >
        Hinwweis
      </label>
      <textarea
        aria-describedby="_r_e_-form-item-description"
        aria-invalid="false"
        class="border-input placeholder:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 flex field-sizing-content min-h-16 w-full rounded-md border bg-transparent px-3 py-2 text-base shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
        data-slot="form-control"
        data-testid="textarea"
        id="_r_e_-form-item"
        maxlength="750"
        name="steps.1.hint"
        placeholder="Kontext oder Anweisungen für den Nutzer im Runner"
        rows="3"
      >
        step-hint-2
      </textarea>
    </div>
    <div
      class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
      data-orientation="horizontal"
      data-slot="separator"
      role="none"
    />
    <div
      class="space-y-3"
    >
      <h3
        class="text-sm font-semibold"
      >
        Nächste Schritte
      </h3>
      <p
        class="text-sm text-muted-foreground"
      >
        Keine Verbindungen — dieser Schritt beendet den Workflow.
      </p>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 w-full"
        data-slot="button"
        data-testid="add-edge-btn"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus mr-2 h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Verbindung hinzufügen
      </button>
    </div>
  </div>
</div>
`;
